door/cloudformation.yaml
AWSTemplateFormatVersion: 2010-09-09

Parameters:

  Name:
    Type: String

  LogLevel:
    Description: Application logging level
    Type: String
    Default: INFO
    AllowedValues:
    - CRITICAL
    - ERROR
    - WARNING
    - INFO
    - DEBUG

  VpcId:
    Description: VPC Id in which to launch EC2 instances for ingest activities
    Type: AWS::EC2::VPC::Id

  SubnetId:
    Description: List of Subnet Ids in which to launch EC2 instances for ingest activities
    Type: List<AWS::EC2::Subnet::Id>

  CloudFrontDomainName:
    Type: String

  CloudFrontKeyPairId:
    Type: String

  PrivateKeySecretName:
    Type: String

  UsersTable:
    Type: String

  AvailabilityLambda:
    Type: String

  StatusLambda:
    Type: String

  ObjectStatusLambda:
    Type: String

  TemporaryCredentialsLambda:
    Type: String

  DoorContainerImage:
    Description: URL for runtime docker container for door application (repository-url/image:tag)
    Type: String

  UrsClientId:
    Type: String

  UrsAuthCode:
    Type: String

  CertificateArn:
    Type: String

  LoadBalancerCidrIp:
    Type: String

  Hostname:
    Type: String

  HelpURL:
    Type: String

  Ami:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Description: Runtime AMI
    Default: /aws/service/ecs/optimized-ami/amazon-linux/recommended/image_id

  RetentionDays:
    Type: Number
    Default: 7

Outputs:

  AppUrl:
    Value: !Sub "https://${Hostname}/door/"

  LoadBalancerDnsName:
    Value: !GetAtt LoadBalancer.DNSName

  UrsRedirectUri:
    Value: !Sub "https://${Hostname}/door/oauth"

Resources:

  Cluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: !Ref Name

  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub "${Name}-instance"
      GroupDescription: !Sub "Security group for ${Name} servers"
      VpcId: !Ref VpcId
      SecurityGroupIngress:
      - SourceSecurityGroupId: !Ref LoadBalancerSecurityGroup
        IpProtocol: tcp
        FromPort: 80
        ToPort: 80

  LaunchConfiguration:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      AssociatePublicIpAddress: true
      IamInstanceProfile: !Sub "arn:aws:iam::${AWS::AccountId}:instance-profile/ecsInstanceRole"
      ImageId: !Ref Ami
      InstanceType: t3.micro
      SecurityGroups:
      - !Ref InstanceSecurityGroup
      UserData:
        Fn::Base64: !Sub |-
          #!/bin/bash -xe
          echo ECS_CLUSTER="${Cluster}" >> /etc/ecs/ecs.config
          echo ECS_ENGINE_TASK_CLEANUP_WAIT_DURATION=1m >> /etc/ecs/ecs.config
      InstanceMonitoring: false

  AutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      VPCZoneIdentifier: !Ref SubnetId
      LaunchConfigurationName: !Ref LaunchConfiguration
      MinSize: 1
      MaxSize: 2
      Tags:
      - Key: Name
        Value: !Ref Name
        PropagateAtLaunch: true

  TaskIamRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Ref Name
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          Action: sts:AssumeRole
          Principal:
            Service:
            - ec2.amazonaws.com
            - ecs-tasks.amazonaws.com
          Effect: Allow
      Policies:
      - PolicyName: policy
        PolicyDocument:
          Version: 2012-10-17
          Statement:
          - Effect: Allow
            Action:
            - dynamodb:GetItem
            - dynamodb:UpdateItem
            Resource: !Sub "arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${UsersTable}"
          - Effect: Allow
            Action: secretsmanager:GetSecretValue
            Resource: !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${PrivateKeySecretName}*"
          - Effect: Allow
            Action: lambda:InvokeFunction
            Resource:
            - !Sub "arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:${AvailabilityLambda}"
            - !Sub "arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:${StatusLambda}"
            - !Sub "arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:${ObjectStatusLambda}"
            - !Sub "arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:${TemporaryCredentialsLambda}"

  LogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Ref Name
      RetentionInDays: 30

  TaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      TaskRoleArn: !Ref TaskIamRole
      ContainerDefinitions:
      - Name: !Ref Name
        Image: !Ref DoorContainerImage
        MemoryReservation: 256
        Cpu: 1024
        LogConfiguration:
          LogDriver: awslogs
          Options:
            awslogs-group: !Ref LogGroup
            awslogs-region: !Ref AWS::Region
        PortMappings:
        - ContainerPort: 80
          HostPort: 80
        Environment:
        - Name: DOOR_CONFIG
          Value: !Sub |-
            {
              "aws_region": "${AWS::Region}",
              "private_key_secret_name": "${PrivateKeySecretName}",
              "cloudfront": {
                "domain_name": "${CloudFrontDomainName}",
                "key_pair_id": "${CloudFrontKeyPairId}",
                "expire_time_in_seconds": 15
              },
              "users_table": "${UsersTable}",
              "helpurl": "${HelpURL}",
              "availability_lambda": "${AvailabilityLambda}",
              "status_lambda": "${StatusLambda}",
              "object_status_lambda": "${ObjectStatusLambda}",
              "temporary_credentials_lambda": "${TemporaryCredentialsLambda}",
              "retention_days": ${RetentionDays}
            }
        - Name: SERVER_NAME
          Value: !Ref Hostname
        - Name: URS_ACCESS_ERROR_URL
          Value: !Sub "https://${Hostname}/error/failedauth.html"
        - Name: URS_AUTH_CODE
          Value: !Ref UrsAuthCode
        - Name: URS_AUTH_SERVER
          Value: https://urs.earthdata.nasa.gov
        - Name: URS_CLIENT_ID
          Value: !Ref UrsClientId
        - Name: URS_REDIRECT_URL
          Value: !Sub "https://${Hostname}/door/oauth"

  GroupScalingPolicy:
    Type: AWS::AutoScaling::ScalingPolicy
    Properties:
      AutoScalingGroupName: !Ref AutoScalingGroup
      PolicyType: TargetTrackingScaling
      Cooldown: 300
      TargetTrackingConfiguration:
        PredefinedMetricSpecification:
          PredefinedMetricType: ASGAverageCPUUtilization
        TargetValue: 50

  ServiceScalingTarget:
    Type: AWS::ApplicationAutoScaling::ScalableTarget
    Properties:
      MinCapacity: 1
      MaxCapacity: 2
      ResourceId: !Sub "service/${Cluster}/${Service.Name}"
      RoleARN: !Sub "arn:aws:iam::${AWS::AccountId}:role/ecsAutoscaleRole"
      ScalableDimension: ecs:service:DesiredCount
      ServiceNamespace: ecs

  ServiceScalingPolicy:
    Type: AWS::ApplicationAutoScaling::ScalingPolicy
    Properties:
      PolicyName: !Ref Name
      PolicyType: TargetTrackingScaling
      ScalingTargetId: !Ref ServiceScalingTarget
      TargetTrackingScalingPolicyConfiguration:
        PredefinedMetricSpecification:
          PredefinedMetricType: ECSServiceAverageCPUUtilization
        TargetValue: 50

  Service:
    Type: AWS::ECS::Service
    DependsOn:
    - HttpListener
    - HttpsListener
    Properties:
      ServiceName: !Ref Name
      Cluster: !Ref Cluster
      DesiredCount: 1
      TaskDefinition: !Ref TaskDefinition
      DeploymentConfiguration:
        MinimumHealthyPercent: 0
        MaximumPercent: 100
      LoadBalancers:
      - TargetGroupArn: !Ref TargetGroup
        ContainerName: !Ref Name
        ContainerPort: 80

  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Ref Name
      HealthCheckIntervalSeconds: 120
      HealthCheckPath: /healthcheck.html
      HealthyThresholdCount: 2
      Port: 80
      Protocol: HTTP
      VpcId: !Ref VpcId
      TargetGroupAttributes:
      - Key: deregistration_delay.timeout_seconds
        Value: 0

  LoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub "${Name}-load-balancer"
      GroupDescription: !Sub "Security group for ${Name} load balancer"
      VpcId: !Ref VpcId
      SecurityGroupIngress:
      - CidrIp: !Ref LoadBalancerCidrIp
        IpProtocol: tcp
        FromPort: 80
        ToPort: 80
      - CidrIp: !Ref LoadBalancerCidrIp
        IpProtocol: tcp
        FromPort: 443
        ToPort: 443

  LoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Ref Name
      Subnets: !Ref SubnetId
      SecurityGroups:
      - !GetAtt LoadBalancerSecurityGroup.GroupId

  HttpListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
      - Type: redirect
        RedirectConfig:
          StatusCode: 301
          Protocol: HTTPS
      LoadBalancerArn: !Ref LoadBalancer
      Port: 80
      Protocol: HTTP

  HttpsListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
      - Type: forward
        TargetGroupArn: !Ref TargetGroup
      LoadBalancerArn: !Ref LoadBalancer
      Port: 443
      Protocol: HTTPS
      Certificates:
      - CertificateArn: !Ref CertificateArn
